--- a/css/layout.css
+++ b/css/layout.css
@@ -78,8 +78,13 @@ h3 {
     margin: 0 0 1rem 4rem;
 }
 
+.sisennys-6rem {
+    margin: 0 0 1rem 6rem;
+}
+
 a {
     font-size: 1.4rem;
+    padding: 0 0 1rem 0;
 }
 
 /* Kuvat responsiivisiksi */
