--- a/css/layout.css
+++ b/css/layout.css
@@ -83,8 +83,10 @@ h3 {
 }
 
 a {
+    display: inline-block;
     font-size: 1.4rem;
-    padding: 0 0 1rem 0;
+    margin: 0 1rem 0.5rem 0;
+
 }
 
 /* Kuvat responsiivisiksi */
